More fixes to reading list detail

--- a/Wikipedia/Code/ReadingListDetailHeaderView.xib
+++ b/Wikipedia/Code/ReadingListDetailHeaderView.xib
@@ -28,21 +28,21 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8lA-8c-7oC" customClass="WMFThemeableTextField">
-                            <rect key="frame" x="0.0" y="70.5" width="394" height="58.5"/>
+                            <rect key="frame" x="0.0" y="70.5" width="394" height="100.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <stackView opaque="NO" alpha="0.0" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="b68-aF-tEl">
-                            <rect key="frame" x="0.0" y="137" width="394" height="34"/>
+                        <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="b68-aF-tEl">
+                            <rect key="frame" x="0.0" y="171" width="394" height="7"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSt-9T-l8Y">
-                                    <rect key="frame" x="0.0" y="0.0" width="394" height="13.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="394" height="0.0"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucP-Jo-vbh">
-                                    <rect key="frame" x="0.0" y="20.5" width="394" height="13.5"/>
+                                    <rect key="frame" x="0.0" y="7" width="394" height="0.0"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
