--- a/Wikipedia/Code/CreateNewReadingListButtonView.xib
+++ b/Wikipedia/Code/CreateNewReadingListButtonView.xib
@@ -1,52 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CreateNewReadingListButtonView" customModule="Wikipedia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="354" height="52"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vbD-qr-YJl" customClass="CreateNewReadingListButtonView" customModule="Wikipedia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="74"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DaE-OV-Xsj" customClass="WMFAlignedImageButton">
-                    <rect key="frame" x="154" y="8" width="46" height="36"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ttz-Ra-Sye" customClass="WMFAlignedImageButton">
+                    <rect key="frame" x="173.5" y="28" width="46" height="38"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="36" id="YZ2-NR-GuH"/>
+                        <constraint firstAttribute="height" constant="36" id="z4H-HO-pbw"/>
                     </constraints>
                     <state key="normal" title="Button"/>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0n7-qo-a15">
-                    <rect key="frame" x="0.0" y="0.0" width="354" height="0.5"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="0.5" id="d4c-nF-MYO"/>
-                    </constraints>
-                </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="Lj3-DK-1zy"/>
             <constraints>
-                <constraint firstItem="DaE-OV-Xsj" firstAttribute="top" secondItem="0n7-qo-a15" secondAttribute="bottom" constant="8" id="BcR-NQ-68p"/>
-                <constraint firstItem="0n7-qo-a15" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Nog-6W-0yV"/>
-                <constraint firstAttribute="trailing" secondItem="0n7-qo-a15" secondAttribute="trailing" id="OkD-pP-zYx"/>
-                <constraint firstItem="0n7-qo-a15" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SEa-69-rrJ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="DaE-OV-Xsj" secondAttribute="bottom" constant="8" id="SrO-16-VUw"/>
-                <constraint firstItem="DaE-OV-Xsj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="chf-UK-zVB"/>
+                <constraint firstItem="Lj3-DK-1zy" firstAttribute="top" secondItem="Ttz-Ra-Sye" secondAttribute="top" constant="-8" id="AAl-3Q-ekK"/>
+                <constraint firstItem="Ttz-Ra-Sye" firstAttribute="centerX" secondItem="vbD-qr-YJl" secondAttribute="centerX" id="Ghr-FG-gKX"/>
+                <constraint firstItem="Lj3-DK-1zy" firstAttribute="bottom" secondItem="Ttz-Ra-Sye" secondAttribute="bottom" constant="8" id="axr-En-BTD"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="button" destination="DaE-OV-Xsj" id="3Ne-qh-Q3a"/>
-                <outlet property="separator" destination="0n7-qo-a15" id="Xw1-71-mnl"/>
+                <outlet property="button" destination="Ttz-Ra-Sye" id="fFb-Jr-MtM"/>
             </connections>
-            <point key="canvasLocation" x="23" y="-247"/>
-        </view>
+            <point key="canvasLocation" x="324" y="-96.251874062968525"/>
+        </collectionReusableView>
     </objects>
 </document>
